File: plugins/nexus-repository-raw/src/main/java/org/sonatype/nexus/content/raw/RawContentFacet.java